--- a/public/assets/stylesheets/light-theme.css
+++ b/public/assets/stylesheets/light-theme.css
@@ -4109,7 +4109,7 @@ html {
 div.login {
   width: 100%;
   height: 100%;
-  position: fixed; }
+  position: absolute; }
   div.login .middle-container {
     overflow: visible;
     display: table;
@@ -4130,7 +4130,8 @@ div.login {
     }
     @media (min-width: 768px) {
       div.login .login-container-header {
-        padding: 10px 0 40px 0; } }
+        padding: 10px 0 40px 0; 
+        } }
   div.login .login-container {
     background-color: white;
     position: relative;
@@ -4160,7 +4161,7 @@ div.login {
       div.login .login-container .with-icon-over-input input[type="text"] {
         padding-right: 28px; }
   div.login .login-container-footer {
-    bottom: 0px;
+    /*bottom: 0px;*/
  }
     div.login .login-container-footer a {
       color: white;
