--- a/public/assets/stylesheets/custom.css
+++ b/public/assets/stylesheets/custom.css
@@ -78,7 +78,8 @@ a, a:hover, a:focus {color: #3498db;}
 	color: #777;
 }
 .presentation-container {
-	background: url(/assets/decorations/background.png) #444;
+	/*background: url(/assets/decorations/background.png) #444;*/
+	background: url(/assets/images/iot_large.jpg) #444;
 	background-attachment: fixed;
 }
 		/* *** SECTION END *** */
@@ -164,8 +165,10 @@ a, a:hover, a:focus {color: #3498db;}
 		/* *** FIRST PARALLAX *** */
 .parallax1 {
 	/* copy your image link into the second url space, the first space is the pattern. */
-	background-image: url(/assets/decorations/pattern-extra-black.png), url(/assets/images/Parallax.jpg);
+	background-image: url(/assets/decorations/pattern-extra-black.png), url(/assets/images/iot_original.jpg);
+  height: 500px; /* Height: auto is to keep aspect ratio */
 }
+
 	.parallax-inner1 {
 		color: #fff;
 	}
@@ -177,13 +180,14 @@ a, a:hover, a:focus {color: #3498db;}
 }
 .parallax-icon-paragraph {
 	color: #fff;
+	font-size: 14px
 }
 		/* *** FIRST PARALLAX END *** */
 		
 		/* *** PRICING TABLES *** */
 .pricing-bg {
-	background: url(/assets/decorations/background.png) #444;
-	background-attachment: fixed;
+	/*background: url(/assets/images/iot_original.jpg) #444;*/
+	/*background-attachment: fixed;*/
 }
 .pricing-bg-title {
 	color: #fff;
@@ -243,7 +247,7 @@ a, a:hover, a:focus {color: #3498db;}
 		/* *** THIRD PARALLAX *** */
 .parallax3 {
 	/* copy your image link into the second url space, the first space is the pattern. */
-	background-image: url(/assets/decorations/pattern-extra-black.png), url(/assets/images/Parallax3.jpg);
+	background-image: url(/assets/decorations/pattern-extra-black.png), url(/assets/images/iot_original.jpg);
 }
 	.parallax-inner3 {
 		color: #fff;
