tracked down a bug saving user api info

--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -590,5 +590,9 @@ margin-right: auto!important;
 	zoom:1;
 	*display:inline;
 	padding: 10px;
-	min-width: 110px
+	min-width: 110px;
+}
+
+.channellist li.activechannel {
+	color: #000;
 }
