--- a/public/assets/stylesheets/custom.css
+++ b/public/assets/stylesheets/custom.css
@@ -161,8 +161,24 @@ a, a:hover, a:focus {color: #3498db;}
 	border-color: #3498db;
 }
 		/* *** BUTTONS END *** */
+
+.graybackground {
+	/* copy your image link into the second url space, the first space is the pattern. */
+	background-image: url(/assets/decorations/pattern-extra-black.png);
+	width: 100%;
+	height: 700px;
+	padding: 0px;
+	/*background-image: url(/assets/images/iot_original_web.jpg);*/
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	position: relative;
+	overflow: hidden;	
+}
+
 		
 		/* *** FIRST PARALLAX *** */
+
 .parallax1 {
 	/* copy your image link into the second url space, the first space is the pattern. */
 	background-image: url(/assets/decorations/pattern-extra-black.png), url(/assets/images/Octoblu.jpg);
