--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -14,7 +14,7 @@
 @font-face {
     font-family: 'entypo';
     src: url('../fonts/entypo/entypo.eot');
-    src: url('../fonts/entypo/entypo.eot?#iefix') 
+    src: url('../fonts/entypo/entypo.eot?#iefix')
     format('embedded-opentype'),
          url('../fonts/entypo/entypo.woff') format('woff'),
          url('../fonts/entypo/entypo.ttf') format('truetype'),
@@ -53,7 +53,7 @@ b, .b, strong, .strong {font-family: robotoslabbold; font-weight: normal;}
 .paragraph {font-size: 16px;line-height: 30px;margin-top: -10px;}
 .btn-margin-icon {margin-right: 5px;} /* Use this class to add a margin-right to the icons of the buttons */
 		/* *** General Classes END *** */
-	
+
 
 /* *** Margin Classes, used to create some spaces inside the layout, you can use it from 10 to 60 px *** */
 .margin-top-100 {margin-top: 100px;} .margin-top-90 {margin-top: 90px;} .margin-top-80 {margin-top: 80px;} .margin-top-70 {margin-top: 70px;} .margin-top-60 {margin-top: 60px;} .margin-top-50 {margin-top: 50px;} .margin-top-40 {margin-top: 40px;} .margin-top-30 {margin-top: 30px;} .margin-top-20 {margin-top: 20px;} .margin-top-10 {margin-top: 10px;} .margin-top-0 {margin-top: 0px;} .margin-top-100-res {margin-top: 100px;} @media  (max-width: 1199px) {.margin-top-100-res {margin-top: 0px; margin-bottom: 60px;}}
@@ -87,12 +87,14 @@ background-color: #eee;
 	height: 80px;
 	display: inline-block;
 	width: 100%;
+	background-attachment: fixed;
 }
 .section-dark {
 	text-align: center;
 	height: 80px;
 	display: inline-block;
 	width: 100%;
+	background-attachment: fixed;
 }
 .section-height {
 	line-height: 40px;
@@ -183,12 +185,12 @@ text-decoration: none;
 	text-align: center;
 	-webkit-box-shadow: none;
 	box-shadow: none;
-	-webkit-transition: none;
-	transition: none;
+	-webkit-transition: all 0.5s ease-in-out!important;
+	transition: all 0.5s ease-in-out!important;
 	overflow: hidden;
 }
 		/* *** PROGRESS BARS END *** */
-		
+
 		/* *** CTA *** */
 .cta-border {
 	overflow: hidden;
@@ -232,7 +234,7 @@ text-decoration: none;
 }
 /* cta responsive end */
 		/* *** CTA END *** */
-		
+
 		/* *** FIRST PARALLAX *** */
 .parallax1 {
 	width: 100%;
@@ -311,7 +313,7 @@ text-decoration: none;
 	-ms-transform: rotateY(180deg);
 	-webkit-transform: rotateY(180deg);
 	/**/
-	opacity: 0;	
+	opacity: 0;
 	z-index: -1;
 }
 .price-icon {
@@ -358,7 +360,7 @@ text-decoration: none;
 	border-bottom: none;
 }
 		/* *** PRICING TABLES END *** */
-		
+
 		/* *** ICONS *** */
 .icon-one {
 	display: inline-block;
@@ -403,7 +405,7 @@ text-decoration: none;
 }
 }
 		/* *** ICONS *** */
-		
+
 		/* *** SECOND PARALLAX *** */
 .parallax2 {
 	width: 100%;
@@ -432,7 +434,7 @@ text-decoration: none;
 	font-size: 15px;
 }
 		/* *** SECOND PARALLAX END *** */
-		
+
 		/* *** THE TEAM *** */
 .team-single {
 	width: auto;
@@ -462,7 +464,7 @@ text-decoration: none;
 	opacity: 1;
 }
 		/* *** THE TEAM END *** */
-		
+
 		/* *** THIRD PARALLAX *** */
 .parallax3 {
 	width: 100%;
@@ -508,7 +510,7 @@ margin: 0px auto;
 }
 }
 		/* *** THIRD PARALLAX END *** */
-		
+
 		/* *** CONTACT FORM *** */
 #contactus {
 	//display: none;
@@ -529,12 +531,12 @@ margin: 0px auto;
 	background-image: none;
 	border-radius: 4px;
 	box-shadow: 0px 0px 0px 1px #ddd;
-	
+	border: 2px dashed;
 }
 
 
 		/* *** CONTACT FORM END *** */
-		
+
 		/* *** FOOTER *** */
 .footer {
 	text-align: center;
@@ -545,7 +547,7 @@ margin: 0px auto;
 	padding-top: 135px;
 }
 .dashed-border {
-	padding: 6px; 
+	padding: 6px;
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-right: 5px;
@@ -572,27 +574,52 @@ padding-left: 15px;
 padding-right: 15px;
 }
 }
-/*BOXED*/
-.boxed {
-width: 1000px!important;
-border-left: 2px solid red!important;
-border-right: 2px solid red!important;
-margin-left: auto!important;
-margin-right: auto!important;
+/*ONLY MOBILE*/
+@media only screen and (min-device-width: 320px) and (max-device-width : 480px){
+	.parallax1, .parallax2, .parallax3, .pricing-bg, .section, .presentation-container {
+		background-attachment: initial;
+	}
+	.form-control {
+		border-color: #777;
+		box-shadow: none;
+	}
+	.price-content {
+		transform: rotateY(0deg)!important;
+		-ms-transform: rotateY(0deg)!important;
+		-webkit-transform: rotateY(0deg)!important;
+	}
+	.price {
+		opacity: 1;
+		z-index: 1;
+		transform: rotateY(0deg);
+		-ms-transform: rotateY(0deg);
+		-webkit-transform: rotateY(0deg);
+	}
+	.price-icon {
+		opacity: 0;
+	}
 }
-
-.channellist {
-	list-style-type: none;
-}
-.channellist li {
-	display:-moz-inline-stack;
-	display:inline-block;
-	zoom:1;
-	*display:inline;
-	padding: 10px;
-	min-width: 110px;
-}
-
-.activechannel {
-	color: #000;
+@media only screen and (min-device-width: 768px) and (max-device-width : 1024px) {
+	.parallax1, .parallax2, .parallax3, .pricing-bg, .section, .presentation-container {
+		background-attachment: initial;
+	}
+	.form-control {
+		border-color: #777;
+		box-shadow: none;
+	}
+	.price-content {
+		transform: rotateY(0deg)!important;
+		-ms-transform: rotateY(0deg)!important;
+		-webkit-transform: rotateY(0deg)!important;
+	}
+	.price {
+		opacity: 1;
+		z-index: 1;
+		transform: rotateY(0deg);
+		-ms-transform: rotateY(0deg);
+		-webkit-transform: rotateY(0deg);
+	}
+	.price-icon {
+		opacity: 0;
+	}
 }
