--- a/public/assets/stylesheets/custom.css
+++ b/public/assets/stylesheets/custom.css
@@ -347,3 +347,28 @@ a, a:hover, a:focus {color: #3498db;}
 .pricing-table:hover > .caption li {
 	border-color: rgba(255,255,255,0.5);
 }
+
+/** **/
+.divScroll {
+overflow:scroll;
+height: auto;
+max-width: 100%;
+}
+.scrollWrapper {
+    overflow: visible;
+    height: auto;
+    width: 100%;
+}
+.divScroll ul {
+    list-style-type: none;
+}
+.divScroll ul li {
+    display:-moz-inline-stack;
+    display:inline-block;
+    zoom: 1;
+    *display: inline;
+    padding: 10px;
+    height: auto;
+    width: auto;
+    vertical-align: top;
+}
