Device page now displays claimed gateways and subdevices.

--- a/public/assets/stylesheets/custom.css
+++ b/public/assets/stylesheets/custom.css
@@ -378,3 +378,9 @@ max-width: 100%;
     left: 25% !important;
     top: 10% !important;
 }
+
+.unavailable {
+    cursor:pointer !important;
+    opacity: 0.3 !important;
+    filter: alpha(opacity=30) !important;
+}
