--- a/public/assets/javascripts/owl.carousel/assets/css/custom.css
+++ b/public/assets/javascripts/owl.carousel/assets/css/custom.css
@@ -265,7 +265,7 @@ padding: 8px 12px;
 	width: 33.3333333%;
 }
 .demo-lazy .demo-slide .bg{
-background: url('../img/AjaxLoader.gif') no-repeat center center #aebab6;
+background: url('../images/AjaxLoader.gif') no-repeat center center #aebab6;
 }
 
 /* Auto Height */
