--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -623,3 +623,24 @@ padding-right: 15px;
 		opacity: 0;
 	}
 }
+.device-subdevices .subdevice-thumbnail {
+    width: 250px;
+}
+.device-subdevices .subdevice-thumbnail .subdevice-icon {
+    height:125px;
+    background-image: url('/assets/images/robots/robot2.png');
+    background-size:contain;
+    background-repeat:no-repeat;
+    background-position:center;
+    margin: 15px 0;
+}
+
+.device-subdevices .subdevice-thumbnail .subdevice-icon.subdevice-icon-skynet-arduino{
+    background-image: url('http://www.unwinnable.com/wp-content/uploads/2010/12/Arduino-logo.png');
+}
+.device-subdevices .subdevice-thumbnail .subdevice-icon.subdevice-icon-skynet-hue{
+    background-image: url('http://dc942d419843af05523b-ff74ae13537a01be6cfec5927837dcfe.r14.cf1.rackcdn.com/wp-content/uploads/Philips-Hue-Logo-125x125.png');
+}
+.device-subdevices .subdevice-thumbnail .subdevice-icon.subdevice-icon-skynet-wemo{
+    background-image: url('http://store.linksys.com/moduleimages/163/WeMo_AppLogo.jpg');
+}
