Me? Well, I like accordions with my polka.

--- a/public/assets/stylesheets/custom.css
+++ b/public/assets/stylesheets/custom.css
@@ -384,3 +384,7 @@ max-width: 100%;
     opacity: 0.3 !important;
     filter: alpha(opacity=30) !important;
 }
+
+.accordion-toggle {
+   cursor: pointer;
+}
