Moved device types to the mongo collection "devicetypes". Updated requisite api calls and urls.

--- a/public/assets/stylesheets/custom.css
+++ b/public/assets/stylesheets/custom.css
@@ -389,6 +389,10 @@ max-width: 100%;
 .device-list .device-actions {
     margin-bottom: 35px;
 }
+
+.device-list .device-actions .add-device:hover{
+    color:white;
+}
 .device-list .subdevice-actions .subdevice {
     cursor:pointer;
 }
