Basic layout for add hub, claim device, add sub device, and add device complete!

--- a/public/assets/stylesheets/custom.css
+++ b/public/assets/stylesheets/custom.css
@@ -390,7 +390,7 @@ max-width: 100%;
     margin-bottom: 35px;
 }
 
-.device-list .device-actions .add-device:hover{
+.device-list .device-actions .device-action-button:hover{
     color:white;
 }
 .device-list .subdevice-actions .subdevice {
