Add home page, change how padding from nav gets added

--- a/public/assets/stylesheets/custom.css
+++ b/public/assets/stylesheets/custom.css
@@ -104,6 +104,10 @@ a, a:hover, a:focus {color: #3498db;}
 .nav>li>a:hover, .nav>li>a:focus {
 	background-color: transparent;
 }
+
+.main-container {
+  margin-top: 50px;
+}
 		/* *** TABS END *** */
 
 		/* *** PROGRESS BARS *** */
